<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:gravity="center"
        android:layout_gravity="center"
        app:titleTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/app_name" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:hint="@string/hint_distance"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:inputType="numberDecimal"
        android:autofillHints="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quantosKm" />

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:hint="@string/price"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/price_liter" />

    <EditText
        android:id="@+id/autonomy"
        android:layout_width="match_parent"
        android:hint="@string/autonomy"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/autonomy_per_litter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/txt_total_cost" />

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/init_total" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/txt_calcular"
        android:padding="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        />



</LinearLayout>